external-crates/move/crates/move-compiler/tests/move_check/expansion/friend_decl_aliased_function.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/move_check/expansion/friend_decl_aliased_function.move:8:12
  │
8 │     friend a;
  │            ^ Unbound module alias 'a'
